--- a/angular.json
+++ b/angular.json
@@ -25,10 +25,13 @@
             "styles": [
               "src/styles.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "node_modules/semantic-ui/dist/semantic.min.css"
+              "node_modules/semantic-ui/dist/semantic.min.css",
+              "node_modules/intl-tel-input/build/css/intlTelInput.css"
             ],
             "scripts": [
-              "node_modules/semantic-ui/dist/semantic.min.js"
+              "node_modules/semantic-ui/dist/semantic.min.js",
+              "node_modules/intl-tel-input/build/js/intlTelInput.min.js",
+              "node_modules/intl-tel-input/build/js/utils.js"
             ],
             "es5BrowserSupport": true
           },
